fix detail page not showing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -285,6 +285,17 @@ main {
   background-color: var(--primary-button-hover);
 }
 
+.notes-detail > h4 {
+  text-align: center;
+  margin-top: 25px;
+  font-weight: 400;
+}
+
+.notes-detail > h3 {
+  margin-top: 25px;
+  font-weight: 500;
+}
+
 .footer {
   justify-content: center;
   padding: 16px;
